--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
+    "react-native-screens": "^3.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
