--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "electron": "^16.0.5",
     "link": "^0.1.5",
     "react": "17.0.2",
     "react-native": "^0.66.3",
